syntax = "proto3";
import "google/protobuf/timestamp.proto";
package idmgrpc;

option go_package = "/idm";

service events {
  rpc GetSession(GetSessionRequest) returns (GetSessionResponse) {}
  rpc CreationSession(CreationSessionRequest)
      returns (CreationSessionResponse) {}
  rpc DeletionSession(DeletionSessionRequest)
      returns (DeletionSessionResponse) {}
  rpc GetAllSession(GetAllSessionRequest) returns (GetAllSessionResponse) {}

  rpc CreationUser(CreationUserRequest) returns (CreationUserResponse) {}
  rpc DeletionUser(DeletionUserRequest) returns (DeletionUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc GetListUserAll(GetListUserAllRequest) returns (GetListUserAllResponse) {}

  rpc Authorization(AuthorizationRequest) returns (AuthorizationResponse);
  rpc Registration(RegistrationRequest) returns (RegistrationResponse);
}

message user {
  string login = 1;
  string firstname = 2;
  string lastname = 3;
  string password = 4;
  int32 created_at = 5;
  int32 profile = 6;
  string source = 7;
}

message session {
  string id = 1;
  string cofig = 2;
  string login = 3;
  google.protobuf.Timestamp duration = 4;
  google.protobuf.Timestamp  created = 5;
  string code = 6;
}

message RegistrationRequest { user person = 1; }
message RegistrationResponse {
  session ss = 1;
  user persone = 2;
  string code = 3;
}

message AuthorizationRequest {
  string login = 1;
  string password = 2;
}
message AuthorizationResponse {
  session ss = 1;
  string code = 2;
}

message GetListUserAllRequest { repeated user persons = 1; }
message GetListUserAllResponse {
  string code = 1;
  repeated user persons = 2;
}

message GetUserRequest { user person = 1; }
message GetUserResponse {
  string code = 1;
  user person = 2;
}

message DeletionUserRequest {
  string login = 1;
  string ids = 2;
}
message DeletionUserResponse { string code = 1; }

message CreationUserRequest { user persone = 1; }
message CreationUserResponse { string code = 1; }

message GetAllSessionRequest { repeated user person = 1; }
message GetAllSessionResponse {
  string code = 1;
  repeated session ss = 2;
}

message DeletionSessionRequest {
  string login = 1;
  string id = 2;
}

message DeletionSessionResponse { string code = 1; }

message GetSessionRequest {
  string login = 1;
  string id = 2;
}

message GetSessionResponse {
  string code = 1;
  session ss = 2;
}

message CreationSessionRequest { user person = 1; }

message CreationSessionResponse { string code = 1; }
